--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Login" class="btn btn-primary mt-1 mr-2 mb-3">
-                    <a href="{% url 'signup' %}">Signup</a> Instead!
+                    <a href="{% url 'signup' %}">Signup</a> 
                 </div>
             </form>
         </div>
