--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -7,7 +7,11 @@
         <div class="col-md-6 mx-auto pt-4 bg-dark">
             <h3 class="text-white text-center pb-2">Login</h3>
             <form action="" method="post" class="bg-dark">
-
+                {% csrf_token %}
+                {% if error_msg %}
+                <div class="alert alert-warning">
+                    {{error_msg}}
+                </div>
                 <div class="form-group">
                     <label for="email">Email address</label>
                     <input type="email" name="email" class="form-control" placeholder="Enter your email">
