--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -5,13 +5,14 @@
 <div class="container text-white pt-5">
     <div class="p-5 m-5">
         <div class="col-md-6 mx-auto pt-4 bg-dark">
-            <h3 class="text-white text-center pb-2">Login</h3>
+            <h3 class="text-white text-center pb-2">Login to your account</h3>
             <form action="" method="post" class="bg-dark">
                 {% csrf_token %}
                 {% if error_msg %}
                 <div class="alert alert-warning">
                     {{error_msg}}
                 </div>
+                {% endif %}
                 <div class="form-group">
                     <label for="email">Email address</label>
                     <input type="email" name="email" class="form-control" placeholder="Enter your email">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Login" class="btn btn-primary mt-1 mr-2 mb-3">
-                    <a href="{% url 'signup' %}">Signup</a> 
+                    <a href="{% url 'signup' %}">Signup</a> Instead!
                 </div>
             </form>
         </div>
