--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -20,9 +20,9 @@
 
         <div id="products" class="col-lg-8">
             <div class="row mx-auto">
-                {% for product in products_objects %}
+                {% for product in products %}
                 <div class="card mx-auto mb-4 bg-dark" style="width: 13.5rem;">
-                    <a href="#{{product.title}}" data-toggle="modal">
+                    <a href="#{{product.name}}" data-toggle="modal">
                         <img src="{{product.image.url}}" class="card-img-top hover_img"></a>
 
 
@@ -37,7 +37,7 @@
                                         </div>
 
                                         <div class="col-md-6">
-                                            <h1>{{product.title}}</h1>
+                                            <h1>{{product.name}}</h1>
 
                                             <h5 class="mt-3 text-warning" style="font-size: 30px; letter-spacing: 2px;">
                                                 <i class="fas fa-dollar-sign" style="margin-right: 2px; font-size: 26px;">
@@ -77,5 +77,5 @@
     </div>
 </div>
 
-
 {% endblock %}
+
