--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -22,11 +22,11 @@
             <div class="row mx-auto">
                 {% for product in products %}
                 <div class="card mx-auto mb-4 bg-dark" style="width: 13.5rem;">
-                    <a href="#{{product.name}}" data-toggle="modal">
+                    <a href="#{{product.title}}" data-toggle="modal">
                         <img src="{{product.image.url}}" class="card-img-top hover_img"></a>
 
 
-                    <div class="modal fade" id="{{product.name}}">
+                    <div class="modal fade" id="{{product.title}">
                         <div class="modal-dialog" id="popup_modal">
                             <div class="modal-content text-white bg-dark">
                                 <div class="modal-body">
@@ -37,7 +37,7 @@
                                         </div>
 
                                         <div class="col-md-6">
-                                            <h1>{{product.name}}</h1>
+                                            <h1>{{product.title}}</h1>
 
                                             <h5 class="mt-3 text-warning" style="font-size: 30px; letter-spacing: 2px;">
                                                 <i class="fas fa-dollar-sign" style="margin-right: 2px; font-size: 26px;">
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="card-body text-white">
-                        <p class="card-title">{{product.name}}</p>
+                        <p class="card-title">{{product.title}}</p>
                         <p class="card-text"><i class="fas fa-dollar-sign" style="margin-right: 2px; font-size: 15px;"></i>{{product.price}}</p>
                         <a href="#" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
