--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'index' %}">Store</a>
+                <a class="nav-link" href="{% url 'home' %}">Store</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="">Cart</a>
