--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+{% load cart %}
 <div class="container mt-4">
     <div class="row">
 
@@ -22,11 +23,11 @@
             <div class="row mx-auto">
                 {% for product in products %}
                 <div class="card mx-auto mb-4 bg-dark" style="width: 13.5rem;">
-                    <a href="#{{product.title}}" data-toggle="modal">
+                    <a href="#{{product.name}}" data-toggle="modal">
                         <img src="{{product.image.url}}" class="card-img-top hover_img"></a>
 
 
-                    <div class="modal fade" id="{{product.title}">
+                    <div class="modal fade" id="{{product.name}}">
                         <div class="modal-dialog" id="popup_modal">
                             <div class="modal-content text-white bg-dark">
                                 <div class="modal-body">
@@ -37,7 +38,7 @@
                                         </div>
 
                                         <div class="col-md-6">
-                                            <h1>{{product.title}}</h1>
+                                            <h1>{{product.name}}</h1>
 
                                             <h5 class="mt-3 text-warning" style="font-size: 30px; letter-spacing: 2px;">
                                                 <i class="fas fa-dollar-sign" style="margin-right: 2px; font-size: 26px;">
@@ -66,9 +67,32 @@
                     </div>
 
                     <div class="card-body text-white">
-                        <p class="card-title">{{product.title}}</p>
+                        <p class="card-title">{{product.name}}</p>
                         <p class="card-text"><i class="fas fa-dollar-sign" style="margin-right: 2px; font-size: 15px;"></i>{{product.price}}</p>
-                        <a href="#" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <div class="card-footer p-0 no-gutters">
+                            {% if product|is_in_cart:request.session.cart %}
+                            <div class="row no-gutters">
+                                <form action="/" method="post" class="col-lg-2">
+                                    {% csrf_token %}
+                                    <input hidden type="text" value="{{product.id}}" name="product">
+                                    <input hidden type="text" value="True" name="remove">
+                                    <input type="submit" value="-" class="btn btn-dark btn-block">
+                                </form>
+                                <div class=" text-center mt-2 text-white col">{{product|cart_quantity:request.session.cart}} in Cart</div>
+                                <form action="/" method="post" class="col-lg-2">
+                                    {% csrf_token %}
+                                    <input hidden type="text" value="{{product.id}}" name="product">
+                                    <input type="submit" value="+" class="btn btn-dark btn-block">
+                                </form>
+                            </div>
+                            {% else %}
+                            <form method="post" action="/" class="btn btn-block">
+                                {% csrf_token %}
+                                <input hidden type="text" value="{{product.id}}" name="product">
+                                <input type="submit" class="btn btn-primary" value="Add to Cart">
+                            </form>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
@@ -76,6 +100,28 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-3 offset-md-4">
+        <ul class="pagination">
+            {% if categories.has_previous %}
+            
+                <li class="page-item">
+                    <a class='page-link' href="?page={{ categories.previous_page_number }}">Previous</a>
+                </li>
+            {% endif %}
 
+            <li class="page-item active">
+                <a class='page-link' href="?page={{ categories.number }}">Current</a>
+            </li> 
+
+            {% if product_objects.has_next %}
+            <li class="page-item">
+                <a class='page-link' href="?page={{ categories.next_page_number }}">Next</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
 {% endblock %}
+
 
