--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -103,20 +103,20 @@
 <div class="row">
     <div class="col-md-3 offset-md-4">
         <ul class="pagination">
-            {% if categories.has_previous %}
+            {% if products.has_previous %}
             
                 <li class="page-item">
-                    <a class='page-link' href="?page={{ categories.previous_page_number }}">Previous</a>
+                    <a class='page-link' href="?page={{ productss.previous_page_number }}">Previous</a>
                 </li>
             {% endif %}
 
             <li class="page-item active">
-                <a class='page-link' href="?page={{ categories.number }}">Current</a>
+                <a class='page-link' href="?page={{ products.number }}">Current</a>
             </li> 
 
-            {% if product_objects.has_next %}
+            {% if products.has_next %}
             <li class="page-item">
-                <a class='page-link' href="?page={{ categories.next_page_number }}">Next</a>
+                <a class='page-link' href="?page={{ products.next_page_number }}">Next</a>
             </li>
             {% endif %}
         </ul>
